--- a/styles/checkIn.css
+++ b/styles/checkIn.css
@@ -4,6 +4,8 @@ body {
   display: flex;
   background-color: var(--bg-gray);
   align-items: center;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .checkin-header {
@@ -29,7 +31,7 @@ body {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 100%;
+  /* height: 100%; */
   align-items: flex-start;
   padding: 6rem;
   padding-top: 4.3rem;
@@ -524,9 +526,9 @@ main {
     align-items: center;
   }
 }
-
+/* 
 @media (max-width: 1700px) {
   main {
     zoom: 0.8;
   }
-}
+} */
