--- a/styles/relatorioPdf.css
+++ b/styles/relatorioPdf.css
@@ -168,6 +168,16 @@ main {
   opacity: 0.3;
 }
 
+.line-div-black {
+  width: 100%;
+  display: flex;
+  height: 0.1rem;
+  background-color: black;
+  /* border: 0.1rem solid black; */
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .btn-pdf {
   background-color: var(--blue-light);
   border: none;
@@ -175,6 +185,14 @@ main {
   border-radius: 5px;
   height: 3rem;
   width: 20%;
+}
+
+.title-infos-relat {
+  font-weight: 700;
+}
+
+.div-table-infos {
+  opacity: 0;
 }
 
 .total-value {
@@ -234,6 +252,45 @@ main {
 
 .graph2 {
   margin-top: 2rem;
+}
+
+.subtitle-graph {
+  font-size: 0.8rem;
+  font-weight: 700;
+}
+
+/* Back to top */
+.back-to-top {
+  background: var(--blue-light);
+  color: white;
+
+  position: fixed;
+  bottom: 15;
+  right: 15;
+  z-index: 100;
+
+  padding: 1rem;
+  clip-path: circle();
+
+  font-size: 1.5rem;
+  line-height: 0;
+
+  visibility: visible;
+  opacity: 0;
+
+  transition: 0.3s;
+  transform: translateY(100%);
+}
+
+.back-to-top i {
+  color: white;
+  font-size: 1.7rem;
+}
+
+.back-to-top.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /********** MEDIA QUERY **********/
